# Unthinkable

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: config.py  database.py  main.py  models.py  repositories.py  schemas.py
app/services/: matcher.py  parser.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/components/: JobForm.tsx  JobList.tsx  ResumeIntake.tsx  ShortlistPanel.tsx
frontend/src/services/: api.ts
tests/: conftest.py  test_api.py  test_matcher.py  test_parser.py
